--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# compiled output
+/dist
+/tmp
+
+# dependencies
+/node_modules
+/bower_components
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage/*
+/libpeerconnection.log
+npm-debug.log*
+yarn-error.log
+testem.log
+
+# ember-try
+.node_modules.ember-try/
+bower.json.ember-try
+package.json.ember-try
+
 # Logs
 logs
 *.log
@@ -56,4 +80,3 @@ typings/
 
 # dotenv environment variables file
 .env
-
